force-app/main/default/objects/Service_Plan__c/fields/Category_ServicePlan__c.field-meta.xml
<CustomField>
    <fullName>Category_ServicePlan__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Service Plan</fullName>
                <default>true</default>
                <label>Service Plan</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>