force-app/main/default/objects/Service_Plan__c/fields/Client_Director__c.field-meta.xml
<CustomField>
    <fullName>Client_Director__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client Director</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Service_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>