force-app/main/default/objects/Service_Plan__c/fields/Client_Manager__c.field-meta.xml
<CustomField>
    <fullName>Client_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Service_Plans1</relationshipName>
    <type>Lookup</type>
</CustomField>