force-app/main/default/objects/Service_Plan__c/fields/Continue__c.field-meta.xml
<CustomField>
    <fullName>Continue__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Continue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>