force-app/main/default/objects/Service_Plan__c/fields/Continue_Comments__c.field-meta.xml
<CustomField>
    <fullName>Continue_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Continue Comments</label>
    <type>TextArea</type>
</CustomField>