force-app/main/default/objects/Service_Plan__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Service Plans</relationshipLabel>
    <relationshipName>Service_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>