force-app/main/default/objects/Service_Plan__c/fields/Service_Strategy_Documentation_Completio__c.field-meta.xml
<CustomField>
    <fullName>Service_Strategy_Documentation_Completio__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Service Strategy Document Completion</label>
    <type>DateTime</type>
</CustomField>