force-app/main/default/objects/Service_Plan__c/fields/Start__c.field-meta.xml
<CustomField>
    <fullName>Start__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Start</label>
    <length>255</length>
    <type>Text</type>
</CustomField>