force-app/main/default/objects/Service_Plan__c/fields/Start_Comments__c.field-meta.xml
<CustomField>
    <fullName>Start_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Start Comments</label>
    <type>TextArea</type>
</CustomField>