force-app/main/default/objects/Service_Plan__c/fields/Start_Stop_Continue_Conversation_with_Cl__c.field-meta.xml
<CustomField>
    <fullName>Start_Stop_Continue_Conversation_with_Cl__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Start/Stop/Continue Conversation</label>
    <type>DateTime</type>
</CustomField>