force-app/main/default/objects/Service_Plan__c/fields/Stop__c.field-meta.xml
<CustomField>
    <fullName>Stop__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Stop</label>
    <length>255</length>
    <type>Text</type>
</CustomField>