force-app/main/default/objects/Service_Plan__c/fields/Stop_Comments__c.field-meta.xml
<CustomField>
    <fullName>Stop_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Stop Comments</label>
    <type>TextArea</type>
</CustomField>