force-app/main/default/objects/Service_Plan__c/fields/Sub_Category_ServicePlan__c.field-meta.xml
<CustomField>
    <fullName>Sub_Category_ServicePlan__c</fullName>
    <label>Sub Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Category_ServicePlan__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AMT Performance</fullName>
            </value>
            <value>
                <fullName>Communications</fullName>
            </value>
            <value>
                <fullName>Relationship Building</fullName>
            </value>
            <value>
                <fullName>Documentation (UIT, partnership logs)</fullName>
            </value>
            <value>
                <fullName>Open Enrollment</fullName>
            </value>
            <value>
                <fullName>Metrics</fullName>
            </value>
            <value>
                <fullName>Products &amp; Services</fullName>
            </value>
            <value>
                <fullName>Reporting</fullName>
            </value>
            <value>
                <fullName>Other Service Improvements (detailed notes in comments)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>